# kiwoom-mcp

./: README.md  kiwoom_api_spec.md  main.py  main_dashboard.py  main_http.py  main_strategy_cycle.py  pyproject.toml  support_api.md
src/: __init__.py  config.py  dashboard.py  dashboard_template.py  mcp_server.py  strategy_cycle.py
src/constants/: __init__.py  api.py
src/models/: __init__.py  auth.py
src/services/: account.py  kiwoom_client.py  market.py  order.py  strategy.py  token_manager.py
tests/: test_account_service.py  test_config.py  test_dashboard.py  test_market_service.py  test_mcp_server.py  test_order_service.py  test_strategy_cycle.py  test_strategy_service.py
