[project]
name = "kiwoom-mcp"
version = "0.1.0"
description = "Server scaffolding for Kiwoom OpenAPI MCP integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
